--- a/views/key.tmpl
+++ b/views/key.tmpl
@@ -120,7 +120,8 @@ ${showval(val, vals[val])}
 </div>
 <p>
 <small i18n:msg="">Data &copy; <a href="http://www.openstreetmap.org/">OpenStreetMap</a> and contributors, <a href="http://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>.</small><br />
-<small i18n:msg="">Data last generated on <xi:include href='../html/timestamp.html' /></small>
+<small i18n:msg="">Data last generated on <xi:include href='../html/timestamp.html' /></small><br />
+<small i18n:msg="">This is OSMStats, version <xi:include href='../html/version.html' /></small>
 </p>
 </body>
 </html>
