Add footer to the homepage too

--- a/views/index.tmpl
+++ b/views/index.tmpl
@@ -66,5 +66,9 @@ div#what {
   <br />
   <div id="what" class="fertigo"></div>
 </div>
+<p>
+<small i18n:msg="">Data last generated on <xi:include href='../html/timestamp.html' /></small><br />
+<small i18n:msg="">This is OSMStats, version <xi:include href='../html/version.html' /></small>
+</p>
 </body>
 </html>
