Add Flattr button

--- a/views/webgraph.tmpl
+++ b/views/webgraph.tmpl
@@ -112,7 +112,10 @@
   </fieldset>
   </form>
   <br />
-<p><small i18n:msg="">Data &copy; <a href="http://www.openstreetmap.org/">OpenStreetMap</a> and contributors, <a href="http://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>.</small></p>
+<p>
+<small i18n:msg="">Data &copy; <a href="http://www.openstreetmap.org/">OpenStreetMap</a> and contributors, <a href="http://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>.</small>
+<xi:include href='../html/footer.html' />
+</p>
 </div>
   <div id="graph">
   </div>
