--- a/views/index.tmpl
+++ b/views/index.tmpl
@@ -69,6 +69,7 @@ div#what {
 <p>
 <small i18n:msg="">Data last generated on <xi:include href='../html/timestamp.html' /></small><br />
 <small i18n:msg="">This is OSMStats, version <xi:include href='../html/version.html' /></small>
+<xi:include href='../html/footer.html' />
 </p>
 </body>
 </html>
