--- a/views/webgraph.tmpl
+++ b/views/webgraph.tmpl
@@ -93,7 +93,7 @@
   <form name="graph_primitive" id="graph_primitive" method="get" action="#">
   <input type='hidden' name='prefix' value='${prefix}' />
   <fieldset>
-    <legend>Graph primitive</legend>
+    <legend>Graph elements</legend>
     <input name="what" value="nodes" type="radio" required='required'>Nodes</input>
     <input name="what" value="ways" type="radio" required='required'>Ways</input>
     <input name="what" value="relations" type="radio" required='required'>Relations</input>
