Added es.po, thanks madi :)

--- a/views/l10n.tmpl
+++ b/views/l10n.tmpl
@@ -1,1 +1,1 @@
-<p class="langs"><a href="/lang/en"><abbr title="English">en</abbr></a> <a href="/lang/eo"><abbr title="Esperanto">eo</abbr></a> <a href="/lang/it"><abbr title="Italian">it</abbr></a> </p>
+<p class="langs"><a href="/lang/en"><abbr title="English">en</abbr></a> <a href="/lang/eo"><abbr title="Esperanto">eo</abbr></a> <a href="/lang/es"><abbr title="Spanish">es</abbr></a> <a href="/lang/it"><abbr title="Italian">it</abbr></a> </p>
