Workaround what seems to be a bug in Genshi's i18n

--- a/views/statistiche.tmpl
+++ b/views/statistiche.tmpl
@@ -94,9 +94,9 @@ ${primitive('Relations', relations)}
 </div>
 <p>
 <small i18n:msg="">Data &copy; <a href="http://www.openstreetmap.org/">OpenStreetMap</a> and contributors, <a href="http://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>.</small><br />
-<small i18n:msg="">Data last generated on <xi:include href='../html/timestamp.html' /></small><br />
-<small i18n:msg="">This is OSMStats, version <xi:include href='../html/version.html' /></small>
-<xi:include href='../html/footer.html' />
+<small i18n:msg="">Data last generated on</small> <small><xi:include href='../html/timestamp.html' /></small><br />
+<small i18n:msg="">This is OSMStats, version</small> <small><xi:include href='../html/version.html' /></small>
 </p>
+<xi:include href='../html/footer.html' />
 </body>
 </html>
