--- a/views/index.tmpl
+++ b/views/index.tmpl
@@ -67,9 +67,9 @@ div#what {
   <div id="what" class="fertigo"></div>
 </div>
 <p>
-<small i18n:msg="">Data last generated on <xi:include href='../html/timestamp.html' /></small><br />
-<small i18n:msg="">This is OSMStats, version <xi:include href='../html/version.html' /></small>
-<xi:include href='../html/footer.html' />
+<small i18n:msg="">Data last generated on</small> <small><xi:include href='../html/timestamp.html' /></small><br />
+<small i18n:msg="">This is OSMStats, version</small> <small><xi:include href='../html/version.html' /></small>
 </p>
+<xi:include href='../html/footer.html' />
 </body>
 </html>
